<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="notification_title">Job Service</string>
    <string name="notification_text">Your Job ran to completion!</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="any">any</string>
    <string name="none">None</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">cancel Jobs</string>
    <string name="job_scheduled">Job Scheduled, job will run when</string>
    <string name="constraints_met">the constraints are met.</string>
    <string name="jobs_canceled">Jobs cancelled</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not Set</string>
</resources>
